--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -22,11 +22,13 @@
             </div>
 
             <div>
-                {% if messages %}
+                <div class="mt-2">
+                    {% if messages %}
                     {% for message in messages %}
                         <div class="alert alert-{{ message.tags }}">{{ message }}</div>
                     {% endfor %}
                 {% endif %}
+                </div>
 
                 <p><strong>O‘rtacha reyting:</strong> {{ object.average_rating }} ⭐</p>
 
